  
  Note: Files included with [PREFIX-include] cannot contain further
  [PREFIX-include] sub-tags.  This could be easily created (respecting
  the "include_depth" Limit etc.) but I felt that that was an unnecessary
  overhead.

* Allow for the proper display of product options that use text or textarea
  widgets by showing the actual value if a label doesn't exist for the value.

UI
--

* Matrix options editor can now display more than 50 variants via the use of a
  more-list.

* Fix sort order of generated variant codes so that they match the code that is
  ordered from the flypage.


Interchange 5.5.1 released on 2007-08-21.

Core
----

* Removed odd formatting from --add entry in interchange manual page.

* Fixed a DoS exploit. A carefully crafted HTTP POST request could cause
  an Interchange page processor to hang until it's killed by Interchange's
  periodic housekeeping routine. If several of these requests are received
  in quick succession then it could be possible to disable all of the page
  processors, rendering Interchange unresponsive for a while. Fixed by
  Kevin Walsh; pointed out by Donald Alexander.

* Removed unused AdminHost global configuration directive.

* In &Vend::Table::DBI::set_row, avoid unwanted expansion of array when we
  have PREFER_NULL fields and number of fields passed is one.

* Added Vend::Swish2 module provided by Brian Miller <brian@endpoint.com>.
  This is superior to Vend::Swish, because instead of the awkward way to
  interface with Swish-e by running the binary it uses the Swish Perl API.

  Note: This module will replace Vend::Swish after we ensure as much backward
  compatibility as possible.

* Allow specification of one additional include directory for specific
  modules, specified like this:

  Require module Vend::Swish /usr/lib/swish-e/perl

* Terminate search if mv_min_string condition isn't met.

* Make [sql-quote] list tag to work properly with multiple lines.
