@@ -56,6 +56,11 @@ Core
 * Allow for the proper display of product options that use text or textarea
   widgets by showing the actual value if a label doesn't exist for the value.
 
+* You can now change the default display type for Matrix widgets (ie if you
+  want the default to be seperate widgets instead of single widget) with a line
+  in catalog.cfg like this:
+	Options Matrix display_type separate
+
 UI
 --
 
